Footer layout fixed, Logg added, header menu items aligned properly, reveal animation added

--- a/src/styles/globals/_base.scss
+++ b/src/styles/globals/_base.scss
@@ -218,7 +218,7 @@ textarea {
     pointer-events: none;
     background: radial-gradient(
         1100px circle at center,
-        rgba(0, 255, 42, 0.404),
+        rgba(0, 255, 42, 0.47),
         transparent 60%
     );
     transform: translate(-50%, -50%);
